--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
     "private": true,
     "scripts": {
         "start": "node node_modules/react-native/local-cli/cli.js start",
-        "test": "jest"
+        "test": "jest",
+        "format": "prettier --write './src/utils/*.{js,css,md}'",
+        "lint": "eslint --ext .js ./src",
+        "lint:fix": "eslint --ext .js ./src --fix",
+        "mock:server": "node ./src/mock/server.js"
     },
     "dependencies": {
+        "axios": "0.18.0",
         "mobx": "4.3.1",
         "mobx-react": "5.2.3",
         "prop-types": "15.6.2",
+        "qs": "6.5.2",
         "react": "16.2.0",
         "react-native": "0.53.3",
         "react-native-animatable": "1.3.0",
@@ -29,17 +35,18 @@
         "victory-native": "30.1.0"
     },
     "devDependencies": {
+        "babel-eslint": "7.2.0",
         "babel-jest": "23.4.0",
         "babel-plugin-transform-decorators-legacy": "1.3.5",
         "babel-preset-react-native": "4.0.0",
         "babel-preset-react-native-stage-0": "1.0.1",
-        "react-test-renderer": "16.2.0",
-        "jest": "23.4.1",
-        "babel-eslint": "7.2.0",
         "eslint": "3.18.0",
         "eslint-plugin-prettier": "2.3.1",
         "eslint-plugin-react": "6.10.3",
-        "prettier": "1.14.2"
+        "jest": "23.4.1",
+        "json-server": "^0.12.2",
+        "prettier": "1.14.2",
+        "react-test-renderer": "16.2.0"
     },
     "jest": {
         "preset": "react-native"
