add:视频播组件增加

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -51,5 +51,9 @@ pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 #    pod 'WZLBadge'
 #    pod 'DZNEmptyDataSet'
 
+   pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
+   pod 'react-native-video', :path => '../node_modules/react-native-video'
+
  end
 
