--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "react-native-vector-icons": "4.6.0",
         "react-navigation": "1.5.12",
         "uuid": "3.3.2",
-        "victory-native": "30.1.0"
+        "victory-native": "30.1.0",
+        "react-native-video": "^3.2.0",
+        "react-native-autoheight-webview": "^0.6.1"
     },
     "devDependencies": {
         "babel-jest": "23.4.0",
