--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "react": "16.2.0",
         "react-native": "0.53.3",
         "react-native-animatable": "1.3.0",
-        "react-native-autoheight-webview": "^0.6.1",
+        "react-native-autoheight-webview": "0.6.1",
         "react-native-deprecated-custom-components": "0.1.2",
         "react-native-image-picker": "0.26.10",
         "react-native-qrcode": "0.2.7",
@@ -27,16 +27,14 @@
         "react-native-svg": "6.5.2",
         "react-native-swipe-list-view": "1.3.0",
         "react-native-swipeout": "2.3.4",
-        "react-native-swiper": "1.5.13",
+        "react-native-swiper": "1.5.8",
         "react-native-tab-navigator": "0.3.4",
         "react-native-underline-tabbar": "1.3.6",
         "react-native-vector-icons": "4.6.0",
-        "react-native-video": "^3.2.0",
+        "react-native-video": "3.2.0",
         "react-navigation": "1.5.12",
         "uuid": "3.3.2",
-        "victory-native": "30.1.0",
-        "react-native-video": "^3.2.0",
-        "react-native-autoheight-webview": "^0.6.1"
+        "victory-native": "30.1.0"
     },
     "devDependencies": {
         "babel-eslint": "7.2.0",
