--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "format": "prettier --write './src/utils/*.{js,css,md}'",
         "lint": "eslint --ext .js ./src",
         "lint:fix": "eslint --ext .js ./src --fix",
-        "mock:server": "node ./src/mock/server.js"
+        "mock:server": "node ./src/mock/server.js",
+        "run-ios": "react-native run-ios"
     },
     "dependencies": {
         "axios": "0.18.0",
