--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "react-native-video": "3.2.0",
         "react-navigation": "1.5.12",
         "uuid": "3.3.2",
-        "victory-native": "30.1.0"
+        "victory-native": "30.1.0",
         "react-navigation": "1.5.12",
         "uuid": "3.3.2",
         "victory-native": "30.1.0",
