--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
         "react-navigation": "1.5.12",
         "uuid": "3.3.2",
         "victory-native": "30.1.0",
-        "react-native-video": "3.2.0",
         "react-native-autoheight-webview": "0.6.1"
     },
     "devDependencies": {
@@ -47,7 +46,7 @@
         "eslint-plugin-prettier": "2.3.1",
         "eslint-plugin-react": "6.10.3",
         "jest": "23.4.1",
-        "json-server": "^0.12.2",
+        "json-server": "0.12.2",
         "prettier": "1.14.2",
         "react-test-renderer": "16.2.0"
     },
