--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "private": true,
     "scripts": {
+        "precommit": "lint-staged",
         "start": "node node_modules/react-native/local-cli/cli.js start",
         "test": "jest",
         "format": "prettier --write './src/utils/*.{js,css,md}'",
@@ -10,6 +11,9 @@
         "lint:fix": "eslint --ext .js ./src --fix",
         "mock:server": "node ./src/mock/server.js",
         "run-ios": "react-native run-ios"
+    },
+    "lint-staged": {
+        "src/**/*.js": "eslint"
     },
     "dependencies": {
         "axios": "0.18.0",
@@ -45,8 +49,10 @@
         "eslint": "3.18.0",
         "eslint-plugin-prettier": "2.3.1",
         "eslint-plugin-react": "6.10.3",
+        "husky": "0.14.3",
         "jest": "23.4.1",
         "json-server": "0.12.2",
+        "lint-staged": "7.2.2",
         "prettier": "1.14.2",
         "react-test-renderer": "16.2.0"
     },
