--- a/android/rn-svg.gradle
+++ b/android/rn-svg.gradle
@@ -15,13 +15,10 @@ android {
 repositories {
     mavenLocal()
     jcenter()
+    google()
     maven {
         // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
         url "$projectDir/../../../node_modules/react-native/android"
-    }
-    maven {
-        url 'https://maven.google.com/'
-        name 'Google'
     }
 }
 
