--- a/android/commonlib/build.gradle
+++ b/android/commonlib/build.gradle
@@ -4,9 +4,8 @@ android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
     buildToolsVersion rootProject.ext.android.buildToolsVersion
 
-
-
     defaultConfig {
+        multiDexEnabled true
         minSdkVersion rootProject.ext.android.minSdkVersion
         targetSdkVersion rootProject.ext.android.targetSdkVersion
     }
@@ -23,4 +22,18 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     compile rootProject.ext.dependencies.support
+    compile(rootProject.ext.dependencies.qiyu) {
+        exclude group: 'com.android.support'
+    }
+    compile rootProject.ext.dependencies.multidex
+    compile rootProject.ext.dependencies.uapp
+    compile rootProject.ext.dependencies.ucommon
+    // From node_modules
+    compile(rootProject.ext.dependencies.rn) {
+        exclude group: 'com.android.support'
+    }
+
+    compile files('libs/umeng-share-core-6.9.3.jar')
+    compile files('libs/umeng-sharetool-6.9.3.jar')
+    compile files('libs/umeng-share-wechat-simplify-6.9.3.jar')
 }
