--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -17,4 +17,11 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+org.gradle.jvmargs=-Xmx1024m -XX:MaxPermSize=1024m -XX:-UseGCOverheadLimit -Dfile.encoding=UTF-8
+org.gradle.parallel=true  #并行构建
 android.useDeprecatedNdk=true
+org.gradle.daemon=true  #开启Gradle守护进程
+KEYSTORE_PASSWORD=!@mr20180911#
+KEY_ALIAS=meeruu
+KEY_PASSWORD=!@mr20180911#
+STORE_FILE=../keystores/sharegoods.jks
