--- a/config.json
+++ b/config.json
@@ -37,7 +37,7 @@
         },
         "qa": {
             "name": "测试环境",
-            "host": "https://test.dnvhot.tech"
+            "host": "https://testapi.sharegoodmall.com/"
         },
         "online": {
             "name": "生产环境",
