fix:注册也协议勾选完善 注册按钮校验优化,添加购物车部分本地图片

--- a/ios/crm_app_xiugou/Info.plist
+++ b/ios/crm_app_xiugou/Info.plist
@@ -39,7 +39,7 @@
 			<string>weixin</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wxf5ab8d9143aa38e9</string>
+				<string>wx401bc973f010eece</string>
 			</array>
 		</dict>
 	</array>
