feat: 新增搜索接口，优化体验

--- a/config.json
+++ b/config.json
@@ -50,6 +50,10 @@
         "吴承骏Login": {
             "name": "测试环境_登陆",
             "host": "http://172.16.10.19:8180/gateway"
+        },
+        "da_wei": {
+            "name": "测试环境_大为",
+            "host": "http://172.16.10.42:8180/gateway"
         }
     }
 }
