--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
         "react": "16.2.0",
         "react-native": "0.53.3",
         "react-native-animatable": "1.3.0",
+        "react-native-autoheight-webview": "0.6.1",
         "react-native-deprecated-custom-components": "0.1.2",
         "react-native-image-picker": "0.26.10",
+        "react-native-linear-gradient": "^2.4.2",
         "react-native-qrcode": "0.2.7",
         "react-native-scrollable-tab-view": "0.8.0",
         "react-native-svg": "6.5.2",
@@ -37,8 +39,7 @@
         "react-native-vector-icons": "4.6.0",
         "react-navigation": "1.5.12",
         "uuid": "3.3.2",
-        "victory-native": "30.1.0",
-        "react-native-autoheight-webview": "0.6.1"
+        "victory-native": "30.1.0"
     },
     "devDependencies": {
         "babel-eslint": "7.2.0",
