fix:1.完善地区选择;2.完善地址管理；3.调整首页样式

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     compile project(':react-native-vector-icons')
     compile project(':react-native-svg')
     compile project(':react-native-image-picker')
+    compile project(':react-native-linear-gradient')
     compile project(path: ':commonlib')
     compile rootProject.ext.dependencies.support
 
