--- a/ios/Podfile
+++ b/ios/Podfile
@@ -55,5 +55,7 @@ pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
    pod 'react-native-video', :path => '../node_modules/react-native-video'
 
+   pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+
  end
 
