fix: 联调，切换到zb环境

--- a/config.json
+++ b/config.json
@@ -29,7 +29,7 @@
         },
         "dev_zb": {
             "name": "开发环境-zb",
-            "host": "http://172.16.10.41"
+            "host": "http://172.16.10.41:8180/gateway"
         },
         "dev": {
             "name": "开发环境",
