fix:增加高迪测试地址,购物车添加list,add方法

--- a/config.json
+++ b/config.json
@@ -54,6 +54,10 @@
         "da_wei": {
             "name": "测试环境_大为",
             "host": "http://172.16.10.42:8180/gateway"
+        },
+        "gao_di": {
+            "name": "测试_高迪",
+            "host": "http://172.16.10.238:8180/gateway"
         }
     }
 }
