--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
         "json-server": "0.12.2",
         "lint-staged": "7.2.2",
         "prettier": "1.14.2",
-        "react-native-linear-gradient": "^2.4.2",
+        "react-native-linear-gradient": "2.4.2",
         "react-test-renderer": "16.2.0"
     },
     "jest": {
