--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -75,6 +75,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':react-native-autoheight-webview')
+    implementation project(':react-native-linear-gradient')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-svg')
     implementation project(':react-native-image-picker')
