fix: 地址管理接口联调完成

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-svg')
     implementation project(':react-native-image-picker')
+    implementation project(':react-native-linear-gradient')
     implementation project(path: ':commonlib')
     implementation rootProject.ext.dependencies.support
 
