feat: 增加搜索热词 perf: 优化详情页 feat: 增加店铺模块：开放店铺设置页面。店铺评分页面，公告列表页面，公告详情页面，发布公告页面

--- a/config.json
+++ b/config.json
@@ -34,6 +34,10 @@
         "gao_di": {
             "name": "测试_高迪",
             "host": "http://172.16.10.238:8180/gateway"
+        },
+        "zhou_hao": {
+            "name": "测试_周浩",
+            "host": "http://172.16.10.29:8180/gateway"
         }
     }
 }
