待提现账户 七鱼客服 style调整

--- a/android/config.gradle
+++ b/android/config.gradle
@@ -29,5 +29,6 @@ ext {
             multidex: 'com.android.support:multidex:+',
             uapp    : 'com.umeng.sdk:analytics:latest.integration',
             ucommon : 'com.umeng.sdk:common:latest.integration',
+            qiyu    : 'com.qiyukf.unicorn:unicorn:+'
     ]
 }
