--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,19 +73,21 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation project(':react-native-autoheight-webview')
-    implementation project(':react-native-vector-icons')
-    implementation project(':react-native-svg')
-    implementation project(':react-native-image-picker')
-    implementation project(':react-native-linear-gradient')
-    implementation project(path: ':commonlib')
-    implementation rootProject.ext.dependencies.support
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    api project(':react-native-autoheight-webview')
+    api project(':react-native-vector-icons')
+    api project(':react-native-svg')
+    api project(':react-native-image-picker')
+    api project(':react-native-linear-gradient')
+    api project(path: ':commonlib')
+    api rootProject.ext.dependencies.support
+    api (rootProject.ext.dependencies.qiyu){
+        exclude group: 'com.android.support'
+    }
+    api rootProject.ext.dependencies.gson
+    api rootProject.ext.dependencies.eventbus
+    api rootProject.ext.dependencies.zxing
 
-    implementation rootProject.ext.dependencies.gson
-    implementation rootProject.ext.dependencies.eventbus
-    implementation rootProject.ext.dependencies.zxing
-
-    implementation rootProject.ext.dependencies.wechat
-    implementation files('libs/alipaySdk-20180601.jar')
+    api rootProject.ext.dependencies.wechat
+    api files('libs/alipaySdk-20180601.jar')
 }
