--- a/android/commonlib/build.gradle
+++ b/android/commonlib/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     compile rootProject.ext.dependencies.multidex
     compile rootProject.ext.dependencies.uapp
     compile rootProject.ext.dependencies.ucommon
+    api (rootProject.ext.dependencies.qiyu){
+        exclude group: 'com.android.support'
+    }
     // From node_modules
     compile(rootProject.ext.dependencies.rn) {
         exclude group: 'com.android.support'
