fix:增加描述文件,增加证书

--- a/PackageShellFiles/ios/AdHocOptions.plist
+++ b/PackageShellFiles/ios/AdHocOptions.plist
@@ -8,7 +8,7 @@
 	<string>ad-hoc</string>
 	<key>provisioningProfiles</key>
 	<dict>
-		<key>com.jure.crm</key>
+		<key>com.meeruu.sharegoods</key>
 		<string>adhoc</string>
 	</dict>
 	<key>signingCertificate</key>
