--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react-native-autoheight-webview": "0.6.1",
         "react-native-deprecated-custom-components": "0.1.2",
         "react-native-image-picker": "0.26.10",
+        "react-native-modalbox": "1.6.0",
         "react-native-qrcode": "0.2.7",
         "react-native-scrollable-tab-view": "0.8.0",
         "react-native-svg": "6.5.2",
