--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ package-lock.json
 /android/gradlew.bat
 /android/keystores/
 pgyer/
+/android/app/src/main/assets/index.android.bundle.meta
+/android/app/src/main/assets/index.android.bundle
