--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "lint": "eslint --ext .js ./src",
         "lint:fix": "eslint --ext .js ./src --fix",
         "mock:server": "node ./src/mock/server.js",
-        "run-ios": "react-native run-ios"
+        "run-ios": "react-native run-ios",
+        "run-android":"react-native run-android"
     },
     "lint-staged": {
         "src/**/*.js": "eslint"
