fix：优化android原生、优化优惠券

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,6 +29,10 @@ android {
     dexOptions {
         jumboMode true
     }
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
     splits {
         abi {
             reset()
