--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.meeruu.sharegoods">
 
     <!-- 权限start -->
@@ -39,6 +38,7 @@
 
     <!--8.0安装应用需要此权限-->
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+    <uses-permission android:name="android.permission.INJECT_EVENTS" />
 
     <uses-feature
         android:name="android.hardware.microphone"
