feat:  新增API数据加签

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "axios": "0.18.0",
+        "jsrsasign": "8.0.12",
         "mobx": "4.3.1",
         "mobx-react": "5.2.3",
         "prop-types": "15.6.2",
