--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,4 @@ pgyer/
 tsconfig.json
 /android/app/src/main/assets/index.android.bundle.meta
 /android/app/src/main/assets/index.android.bundle
+/android/app/release/
