--- a/android/commonlib/build.gradle
+++ b/android/commonlib/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile rootProject.ext.dependencies.multidex
     compile rootProject.ext.dependencies.uapp
     compile rootProject.ext.dependencies.ucommon
+    api rootProject.ext.dependencies.gson
 
     // From node_modules
     compile(rootProject.ext.dependencies.rn) {
