--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
     },
     "qa": {
       "name": "测试环境",
-      "host": "https://testapi.sharegoodsmall.com/gateway"
+      "host": "http://testapi.sharegoodsmall.com/gateway"
     },
     "online": {
       "name": "生产环境",
