--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react-native-image-picker": "0.26.10",
         "react-native-modalbox": "1.6.0",
         "react-native-qrcode": "0.2.7",
+        "react-native-render-html": "^3.10.0",
         "react-native-scrollable-tab-view": "0.8.0",
         "react-native-svg": "6.5.2",
         "react-native-swipe-list-view": "1.3.0",
