--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,7 +83,7 @@ dependencies {
     api project(':react-native-svg')
     api project(':react-native-image-picker')
     api project(':react-native-linear-gradient')
-    compile project(':react-native-device-info')
+    compile project(':rn_deviceinfo')
     api project(path: ':commonlib')
     api project(path: ':qiyu_service')
 
