--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,6 +1,4 @@
 rootProject.name = 'sharegoods'
-include ':react-native-device-info'
-project(':react-native-device-info').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-device-info/android')
 include ':react-native-linear-gradient'
 project(':react-native-linear-gradient').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-linear-gradient/android')
 include ':react-native-vector-icons'
@@ -15,3 +13,4 @@ project(':react-native-image-picker').projectDir = new File(rootProject.projectD
 include ':app'
 include ':commonlib'
 include ':qiyu_service'
+include ':rn_deviceinfo'
