--- a/android/rn_deviceinfo/src/main/AndroidManifest.xml
+++ b/android/rn_deviceinfo/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.learnium.RNDeviceInfo">
+          package="com.meeruu.RNDeviceInfo">
           
     <application>
         <receiver
-            android:name="com.learnium.RNDeviceInfo.RNDeviceReceiver"
+            android:name="com.meeruu.RNDeviceInfo.RNDeviceReceiver"
             android:enabled="true"
             android:exported="true"
         >
