--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-native-device-info": "^0.24.0",
         "react-native-ezswiper": "^1.2.2",
         "react-native-image-picker": "0.26.10",
+        "react-native-largelist": "^1.2.12",
         "react-native-modalbox": "1.6.0",
         "react-native-qrcode": "0.2.7",
         "react-native-render-html": "^3.10.0",
