--- a/android/commonlib/build.gradle
+++ b/android/commonlib/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile rootProject.ext.dependencies.ucommon
     api rootProject.ext.dependencies.gson
     api rootProject.ext.dependencies.zxing
+    api rootProject.ext.dependencies.walle
 
     // From node_modules
     compile(rootProject.ext.dependencies.rn) {
