--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,6 +93,8 @@ dependencies {
     compile project(':rn_deviceinfo')
     api project(path: ':commonlib')
     api project(path: ':qiyu_service')
+    api project(path: ':qrcode')
+    api project(path: ':permissionlib')
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.+'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.+'
