--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -51,7 +51,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:clipToPadding="true"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:fitsSystemWindows="true"
@@ -65,9 +65,6 @@
         </activity>
         <activity
             android:name="com.facebook.react.devsupport.DevSettingsActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".zxing.activity.CaptureActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name="com.alipay.sdk.app.H5PayActivity"
