--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,6 +32,7 @@ android {
     lintOptions {
         checkReleaseBuilds false
         abortOnError false
+        disable 'GoogleAppIndexingWarning'
     }
     splits {
         abi {
