--- a/android/permissionlib/src/main/AndroidManifest.xml
+++ b/android/permissionlib/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="pub.devrel.easypermissions">
+    package="com.meeruu.permissions">
 
     <application>
         <activity
-            android:name="com.smartstudy.permissions.AppSettingsDialogHolderActivity"
+            android:name="com.meeruu.permissions.AppSettingsDialogHolderActivity"
             android:exported="false"
             android:label=""
             android:theme="@style/PermissionsLib.Transparent" />
