--- a/config.json
+++ b/config.json
@@ -54,6 +54,10 @@
     "dev_yxm": {
       "name": "开发环境-杨小猛",
       "host": "http://172.16.10.12:8180/gateway"
+    },
+    "pre_yxm": {
+      "name": "预发布环境",
+      "host": "http://uatapi.sharegoodsmall.com/gateway"
     }
   }
 }
