--- a/android/qrcode/build.gradle
+++ b/android/qrcode/build.gradle
@@ -6,6 +6,7 @@ android {
 
 
     defaultConfig {
+        multiDexEnabled true
         minSdkVersion rootProject.ext.android.minSdkVersion
         targetSdkVersion rootProject.ext.android.targetSdkVersion
         versionCode rootProject.ext.android.versionCode
