--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "showDebugPanel": true,
-  "envType": "qa",
+  "envType": "pre_release",
   "__注释__": "[showDebugPanel]:是否显示调试面板   [envType]:决定网络启动后，默认的网络环境类型",
   "env": {
     "dev_mock": {
@@ -57,7 +57,7 @@
     },
     "pre_release": {
       "name": "预发布环境",
-      "host": "http://uatapi.sharegoodsmall.com/gateway"
+      "host": "https://uatapi.sharegoodsmall.com/gateway"
     }
   }
 }
