--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "showDebugPanel": true,
-    "envType": "qa",
+    "envType": "dev_yxm",
     "__注释__": "[showDebugPanel]:是否显示调试面板   [envType]:决定网络启动后，默认的网络环境类型",
     "env": {
         "dev_mock": {
