--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "react-native-swiper": "1.5.8",
         "react-native-tab-navigator": "0.3.4",
         "react-native-underline-tabbar": "1.3.6",
+        "react-native-update": "^5.1.3",
         "react-native-vector-icons": "4.6.0",
         "react-native-video": "^3.2.1",
         "react-navigation": "1.5.12",
