--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -7,3 +7,4 @@ KEYSTORE_PASSWORD=!@mr20180911#
 KEY_ALIAS=meeruu
 KEY_PASSWORD=!@mr20180911#
 STORE_FILE=../keystores/sharegoods.jks
+android.enableAapt2=false
