--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,5 @@ tsconfig.json
 /android/app/src/main/assets/index.android.bundle.meta
 /android/app/src/main/assets/index.android.bundle
 /android/app/release/
+
+.update
