--- a/android/rn-update.gradle
+++ b/android/rn-update.gradle
@@ -27,7 +27,7 @@ repositories {
 }
 
 dependencies {
-    compile(rootProject.ext.dependencies.rn) {
+    api(rootProject.ext.dependencies.rn) {
         exclude group: 'com.android.support'
     }
 }
