--- a/android/rn-gradient.gradle
+++ b/android/rn-gradient.gradle
@@ -17,11 +17,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    api fileTree(include: ['*.jar'], dir: 'libs')
     // From node_modules
-    compile rootProject.ext.dependencies.support
+    api rootProject.ext.dependencies.support
     // From node_modules
-    compile(rootProject.ext.dependencies.rn) {
+    api(rootProject.ext.dependencies.rn) {
         exclude group: 'com.android.support'
     }
 }
