--- a/android/rn-image-picker.gradle
+++ b/android/rn-image-picker.gradle
@@ -31,9 +31,9 @@ repositories {
 }
 
 dependencies {
-    compile rootProject.ext.dependencies.support
+    api rootProject.ext.dependencies.support
     // From node_modules
-    compile(rootProject.ext.dependencies.rn) {
+    api(rootProject.ext.dependencies.rn) {
         exclude group: 'com.android.support'
     }
 }
