MzBanner 原生接入尝试，邀请套餐bug修复

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -97,6 +97,7 @@ dependencies {
     api project(path: ':commonlib')
     api project(path: ':qiyu_service')
     api project(path: ':qrcode')
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
     debugImplementation('com.squareup.leakcanary:leakcanary-android:1.+') {
         exclude(module: 'support-core-utils')
