--- a/android/config.gradle
+++ b/android/config.gradle
@@ -33,6 +33,7 @@ ext {
             exopOKhttp  : 'com.google.android.exoplayer:extension-okhttp:2.7.3',
             multidex    : 'com.android.support:multidex:1.0.3',
             recyclerview: 'com.android.support:recyclerview-v7:27.1.1',
-            glide       : 'com.github.bumptech.glide:glide:3.6.1',
+            glide          : 'com.github.bumptech.glide:glide:4.+',
+            glideprocessor : 'com.github.bumptech.glide:compiler:4.+',
     ]
 }
