pref：新增Android极光推送

--- a/android/commonlib/build.gradle
+++ b/android/commonlib/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     api files('libs/umeng-share-wechat-simplify-6.9.3.jar')
     api files('libs/umeng-share-QQ-simplify-6.9.3.jar')
     api files('libs/umeng-share-sina-simplify-6.9.3.jar')
+    api files('libs/jcore-android-1.2.6.jar')
+    api files('libs/jpush-android-3.1.7.jar')
 }
